use Utilities.isMac (#61044)